--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@angular/material": "^16.2.12",
     "@angular/platform-browser": "^16.2.12",
     "@angular/platform-browser-dynamic": "^16.2.12",
-    "@angular/router": "^16.2.12"
+    "@angular/router": "^16.2.12",
+    "ngx-toastr": "^18.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.12"
