Read More And magazin functionality

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@angular-devkit/schematics": "^17.3.7",
     "@angular/animations": "^16.2.12",
     "@angular/cdk": "^16.2.12",
     "@angular/common": "^16.2.12",
@@ -9,6 +10,8 @@
     "@angular/platform-browser": "^16.2.12",
     "@angular/platform-browser-dynamic": "^16.2.12",
     "@angular/router": "^16.2.12",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
+    "ngx-extended-pdf-viewer": "^20.0.2",
     "ngx-toastr": "^18.0.0"
   },
   "devDependencies": {
